charts/camunda-platform-8.2/test/unit/connectors/golden/deployment.golden.yaml
---
# Source: camunda-platform/templates/connectors/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-connectors
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.31"
    app.kubernetes.io/component: connectors
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: camunda-platform
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: connectors
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: camunda-platform
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "8.2.31"
        app.kubernetes.io/component: connectors
    spec:
      imagePullSecrets:
        []
      containers:
        - name: connectors
          image: camunda/connectors-bundle:0.23.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          env:
            - name: SERVER_PORT
              value: "8080"
            - name: CAMUNDA_OPERATE_CLIENT_KEYCLOAK-URL
              value: http://camunda-platform-test-keycloak:80
            - name: CAMUNDA_OPERATE_CLIENT_CLIENT-ID
              value: connectors
            - name: CAMUNDA_OPERATE_CLIENT_CLIENT-SECRET
              valueFrom:
                secretKeyRef:
                  name: "camunda-platform-test-connectors-identity-secret"
                  key: connectors-secret
            - name: CAMUNDA_OPERATE_CLIENT_KEYCLOAK-REALM
              value: camunda-platform
            - name: CAMUNDA_OPERATE_CLIENT_URL
              value: "http://camunda-platform-test-operate:80"
            - name: ZEEBE_CLIENT_BROKER_GATEWAY-ADDRESS
              value: "camunda-platform-test-zeebe-gateway:26500"
            - name: ZEEBE_CLIENT_SECURITY_PLAINTEXT
              value: "true"
            - name: ZEEBE_CLIENT_ID
              value: zeebe
            - name: ZEEBE_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: "camunda-platform-test-zeebe-identity-secret"
                  key: zeebe-secret
            - name: ZEEBE_AUTHORIZATION_SERVER_URL
              value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/token"
            - name: ZEEBE_TOKEN_AUDIENCE
              value: zeebe-api
          command: []
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
